# rubik-cube-opengl

./: .editorconfig  CMakeLists.txt  README.md
src/: AnimatedModel.cpp  Camera.cpp  Cube.cpp  FixedPosition.cpp  Mesh.cpp  Model.cpp  Object.cpp  Position.cpp  RelativePosition.cpp  RubikCube.cpp  Shader.cpp  Square.cpp  Window.cpp  main.cpp
src/include/: AnimatedModel.hpp  Camera.hpp  Cube.hpp  Event.hpp  FixedPosition.hpp  Mesh.hpp  Model.hpp  Object.hpp  Position.hpp  RelativePosition.hpp  RubikCube.hpp  Shader.hpp  Square.hpp  Window.hpp  constants.hpp
src/shaders/: shader.frag  shader.vert
